@@ -4587,32 +4587,6 @@ argument_list|,
 name|resolvedNodes
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
-name|settings
-operator|.
-name|debugConflictResolution
-argument_list|()
-condition|)
-block|{
-name|Message
-operator|.
-name|debug
-argument_list|(
-literal|"found conflicting revisions for "
-operator|+
-name|node
-operator|+
-literal|" in "
-operator|+
-name|ancestor
-operator|+
-literal|": "
-operator|+
-name|conflicts
-argument_list|)
-expr_stmt|;
-block|}
 name|ConflictManager
 name|conflictManager
 init|=
@@ -4632,16 +4606,15 @@ decl_stmt|;
 name|Collection
 name|resolved
 init|=
-name|conflictManager
-operator|.
 name|resolveConflicts
 argument_list|(
+name|node
+argument_list|,
 name|ancestor
-operator|.
-name|getNode
-argument_list|()
 argument_list|,
 name|conflicts
+argument_list|,
+name|conflictManager
 argument_list|)
 decl_stmt|;
 if|if
@@ -5257,6 +5230,148 @@ block|}
 block|}
 specifier|private
 name|Collection
+name|resolveConflicts
+parameter_list|(
+name|VisitNode
+name|node
+parameter_list|,
+name|VisitNode
+name|ancestor
+parameter_list|,
+name|Collection
+name|conflicts
+parameter_list|,
+name|ConflictManager
+name|conflictManager
+parameter_list|)
+block|{
+if|if
+condition|(
+name|node
+operator|.
+name|getParent
+argument_list|()
+operator|!=
+name|ancestor
+comment|// we are not handling the direct parent
+operator|&&
+name|conflictManager
+operator|==
+name|settings
+operator|.
+name|getConflictManager
+argument_list|(
+name|node
+operator|.
+name|getModuleId
+argument_list|()
+argument_list|)
+comment|// the conflict manager is the default one
+operator|&&
+name|node
+operator|.
+name|getParent
+argument_list|()
+operator|.
+name|getNode
+argument_list|()
+operator|.
+name|getResolvedNodes
+argument_list|(
+name|node
+operator|.
+name|getModuleId
+argument_list|()
+argument_list|,
+name|node
+operator|.
+name|getRootModuleConf
+argument_list|()
+argument_list|)
+operator|.
+name|equals
+argument_list|(
+name|conflicts
+argument_list|)
+comment|// there is no new conflict in this ancestor
+condition|)
+block|{
+comment|// IVY-465 case
+if|if
+condition|(
+name|settings
+operator|.
+name|debugConflictResolution
+argument_list|()
+condition|)
+block|{
+name|Message
+operator|.
+name|debug
+argument_list|(
+literal|"no new conflicting revisions for "
+operator|+
+name|node
+operator|+
+literal|" in "
+operator|+
+name|ancestor
+operator|+
+literal|": "
+operator|+
+name|conflicts
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|conflicts
+return|;
+block|}
+else|else
+block|{
+if|if
+condition|(
+name|settings
+operator|.
+name|debugConflictResolution
+argument_list|()
+condition|)
+block|{
+name|Message
+operator|.
+name|debug
+argument_list|(
+literal|"found conflicting revisions for "
+operator|+
+name|node
+operator|+
+literal|" in "
+operator|+
+name|ancestor
+operator|+
+literal|": "
+operator|+
+name|conflicts
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|conflictManager
+operator|.
+name|resolveConflicts
+argument_list|(
+name|ancestor
+operator|.
+name|getNode
+argument_list|()
+argument_list|,
+name|conflicts
+argument_list|)
+return|;
+block|}
+block|}
+specifier|private
+name|Collection
 name|computeConflicts
 parameter_list|(
 name|VisitNode
@@ -5405,18 +5520,11 @@ name|resolvedNodes
 operator|.
 name|isEmpty
 argument_list|()
-operator|&&
-name|node
-operator|.
-name|getParent
-argument_list|()
-operator|!=
-name|ancestor
 condition|)
 block|{
 comment|//Conflict must only be computed per root configuration at this step.
 name|Collection
-name|ancestorDepIvyNodes
+name|parentDepIvyNodes
 init|=
 name|node
 operator|.
@@ -5449,7 +5557,7 @@ control|(
 name|Iterator
 name|it
 init|=
-name|ancestorDepIvyNodes
+name|parentDepIvyNodes
 operator|.
 name|iterator
 argument_list|()
@@ -5462,7 +5570,7 @@ condition|;
 control|)
 block|{
 name|IvyNode
-name|ancestorDep
+name|parentDep
 init|=
 operator|(
 name|IvyNode
@@ -5474,7 +5582,7 @@ argument_list|()
 decl_stmt|;
 if|if
 condition|(
-name|ancestorDep
+name|parentDep
 operator|.
 name|getModuleId
 argument_list|()
@@ -5492,7 +5600,7 @@ name|conflicts
 operator|.
 name|add
 argument_list|(
-name|ancestorDep
+name|parentDep
 argument_list|)
 expr_stmt|;
 block|}
